add ca configmap controller

--- a/bundle/manifests/node-observability-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/node-observability-operator.clusterserviceversion.yaml
@@ -170,6 +170,14 @@ spec:
           verbs:
           - create
         - apiGroups:
+          - apps
+          resources:
+          - daemonsets
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
           - authentication.k8s.io
           resources:
           - tokenreviews
@@ -183,13 +191,12 @@ spec:
           - create
         - apiGroups:
           - ""
-          resourceNames:
-          - kubelet-serving-ca
           resources:
           - configmaps
           verbs:
           - get
           - list
+          - watch
         - apiGroups:
           - ""
           resources:
