ca configmap controller: use dedicated cache

--- a/config/samples/nodeobservability_v1alpha2_nodeobservability-all.yaml
+++ b/config/samples/nodeobservability_v1alpha2_nodeobservability-all.yaml
@@ -4,5 +4,5 @@ metadata:
   name: cluster
 spec:
   nodeSelector:
-    kubernetes.io/hostname: worker-a
+    node-role.kubernetes.io/worker: ""
   type: crio-kubelet
